--- a/MvcApplication8/MvcApplication8/bin/MvcApplication8.dll.config
+++ b/MvcApplication8/MvcApplication8/bin/MvcApplication8.dll.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,13 +6,11 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MvcApplication8-20150131162226;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MvcApplication8-20150131162226.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="CarContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=CarContext-20150131162545; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CarContext-20150131162545.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MvcApplication8-20150131162226;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MvcApplication8-20150131162226.mdf" providerName="System.Data.SqlClient" />
+    <add name="CarContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=CarContext-20150131162545; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|CarContext-20150131162545.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -58,7 +56,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
@@ -68,5 +66,8 @@
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
 </configuration>
