--- a/MvcApplication8/MvcApplication8/MvcApplication8.csproj
+++ b/MvcApplication8/MvcApplication8/MvcApplication8.csproj
@@ -272,6 +272,7 @@
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <Content Include="Scripts\showdesc.js" />
     <Content Include="Scripts\upvote.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
