frontend not complete

--- a/NewsFeed/NewsFeed/NewsFeed.csproj
+++ b/NewsFeed/NewsFeed/NewsFeed.csproj
@@ -257,6 +257,7 @@
     <None Include="Properties\PublishProfiles\NewsFeed.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Images\thumb.png" />
+    <Content Include="Scripts\articleDetail.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
